--- a/MobilReklame/MobilReklame/MobilReklame.csproj
+++ b/MobilReklame/MobilReklame/MobilReklame.csproj
@@ -100,10 +100,12 @@
     <Compile Include="BaseClasses\CommandsBase\DeleteCommandBase.cs" />
     <Compile Include="BaseClasses\CommandsBase\EditCommandBase.cs" />
     <Compile Include="BaseClasses\DomainBase\CatalogBase.cs" />
-    <Compile Include="BaseClasses\DomainBase\DomainBase.cs" />
-    <Compile Include="BaseClasses\Factories\VievModelFactoryBase.cs" />
+    <Compile Include="BaseClasses\Factories\ViewModelFactoryBase.cs" />
     <Compile Include="BaseClasses\ViewModelsBase\ItemViemModelBase.cs" />
     <Compile Include="BaseClasses\ViewModelsBase\MasterDetailsViewModelBase.cs" />
+    <Compile Include="Interfaces\ICRUD.cs" />
+    <Compile Include="Interfaces\IFactory.cs" />
+    <Compile Include="Interfaces\IKey.cs" />
     <Compile Include="Models\Customer\Customer.cs" />
     <Compile Include="Models\Customer\CustomerCatalog.cs" />
     <Compile Include="Models\Order\OrderMaterials.cs" />
